--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "deploy": "gh-pages -d dist",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,12 +21,16 @@
   "bugs": {
     "url": "https://github.com/ImVladislav/Peei_Bot/issues"
   },
-  "homepage": "https://github.com/ImVladislav/Peei_Bot#readme",
+  "homepage": "https://imvladislav.github.io",
   "dependencies": {
     "axios": "^1.7.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0",
     "node-telegram-keyboard-wrapper": "^3.1.0"
+  },
+  "devDependencies": {
+      "gh-pages": "^6.1.1"
+  
   }
 }
