--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/ImVladislav/Peei_Bot/issues"
   },
-  "homepage": "https://peei-bot.vercel.app",
+  "homepage": "https://imvladislav.github.io",
   "dependencies": {
     "axios": "^1.7.2",
     "crypto": "^1.0.1",
