--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "axios": "^1.7.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-telegram-bot-api": "^0.66.0",
     "node-telegram-keyboard-wrapper": "^3.1.0"
   },
   "devDependencies": {
-      "gh-pages": "^6.1.1"
-  
+    "gh-pages": "^6.1.1"
   }
 }
